# sonar-mcp

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CLAUDE_SECURITY.md  README.md  pyproject.toml  sonar-project.properties  test_script.py
.claude/: settings.json  settings.local.json
.github/: dependabot.yml
.github/workflows/: ci.yml  no-noqa.yml
src/sonar_mcp/: __main__.py  client.py  exceptions.py  models.py
src/sonar_mcp/models/: __init__.py  common.py  issues.py  projects.py  quality_gate.py
src/sonar_mcp/tools/: issues.py  projects.py  quality_gate.py
tests/: conftest.py  test_client.py  test_client_retry.py  test_client_retry_more.py  test_get_issues.py  test_issues.py  test_main.py  test_mcp_protocol.py  test_projects.py  test_quality_gate.py  test_tool_schemas.py
tests/snapshots/: tool_schemas.json
