[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "sonar-mcp"
version = "0.1.0"
description = "MCP server wrapping the SonarCloud REST API"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.27.2",
    "httpx>=0.28.1",
    "pydantic>=2.7",
    "cachetools>=5.3",
]

[project.optional-dependencies]
dev = [
    "mypy>=2.1.0",
    "ruff>=0.15.13",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "respx>=0.21",
    "pre-commit>=3.7",
    "types-cachetools>=7.0.0.20260518",
    "pip-audit>=2.10.0",
    "bandit>=1.9.4",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
strict = true
python_version = "3.12"
files = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "S",   # flake8-bandit (security)
]
ignore = [
    "S101", # allow assert in tests
]

[tool.ruff.lint.isort]
known-first-party = ["sonar_mcp"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
addopts = "--cov=sonar_mcp --cov-report=term-missing --cov-report=xml -m 'not integration'"
markers = ["integration: marks tests as integration tests (require real SonarCloud credentials)"]

[tool.coverage.run]
source = ["src"]

[tool.bandit]
targets = ["src"]
skips = ["B101"]
